Adds properties file support

--- a/impl/java/.classpath
+++ b/impl/java/.classpath
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/core.jar"/>
-	<classpathentry kind="lib" path="lib/Ess.jar"/>
-	<classpathentry kind="lib" path="lib/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="lib/jogl.jar"/>
-	<classpathentry kind="lib" path="lib/opengl.jar"/>
-	<classpathentry kind="lib" path="lib/tritonus_share.jar"/>
-	<classpathentry kind="lib" path="lib/jl1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jsminim.jar"/>
-	<classpathentry kind="lib" path="lib/minim-spi.jar"/>
-	<classpathentry kind="lib" path="lib/minim.jar"/>
-	<classpathentry kind="lib" path="lib/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="lib/RXTXcomm.jar"/>
-	<classpathentry kind="lib" path="lib/serial.jar"/>
-	<classpathentry kind="lib" path="lib/tritonus_aos.jar"/>
-	<classpathentry kind="lib" path="lib/libTUIO.jar"/>
-	<classpathentry kind="lib" path="lib/TUIO.jar"/>
-	<classpathentry kind="lib" path="lib/twitpic4j.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/BebopUtil"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/core.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Ess.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gluegen-rt.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jogl.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opengl.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tritonus_share.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jl1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsminim.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/minim-spi.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/minim.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mp3spi1.9.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/RXTXcomm.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/serial.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tritonus_aos.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/libTUIO.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/TUIO.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/twitpic4j.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/BebopUtil"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
