Adds: save frames to disk instead of twitpic.
Save stuff to disk instead of twitpic, since teh code is laggy and
buggy.

--- a/impl/processing/SprayDigital/data/sprayDigital.properties
+++ b/impl/processing/SprayDigital/data/sprayDigital.properties
@@ -4,5 +4,6 @@ twitpic.pass =			caralhada
 twitpic.text =			sprayDigital na tuitosfera!
 
 # some other stuff
+savePrefix =			save/test
 foo.bar = 			baz
 
