Make sprayLine() _fast_. Adds better magic().
sprayLine() now operates at about 30 times teh speed it used to. This
was accomplished by using PGraphics directly, scheduling renderization
efficiently.

magic() is now defined as sqrt((e^(x^2) - 1)/(e-1)). Since sqrt(x)
distributes points homogeneously inside teh circle (or at least it seems
to), it makes much more sense to make a composite function of it than to
use a hand-adjusted polynomial.

--- a/impl/java/.classpath
+++ b/impl/java/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="disabled/|cc/bebop/spraydigital/SprayDigital.java" kind="src" path="src"/>
+	<classpathentry excluding="disabled/" kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/BebopUtil"/>
 	<classpathentry kind="lib" path="lib/processing/libraries/minim/library/jl1.0.jar"/>
