Fix logo margin. Add notice images. Minor fixes.
Set logo margin to 64px, rather than 15px.

Replace old notices made in mspaint.

Adds switch in props file to enable/disable TwitpicService and set spray
discharge to 200000 and

--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -1,8 +1,9 @@
-# twitpic
-twitpic.user =			spamdora666
-twitpic.pass =			caralhada
-twitpic.text =			sprayDigital na tuitosfera!
+﻿# twitpic
+twitpic.user =			spraydigital
+twitpic.pass =			b3b0pspraydigital
+twitpic.text =			#SprayDigital na mostra #ArteRadical no Espaco Ecco
 twitpic.delay =			3000
+twitpic.enable =		true
 
 SprayCan.port =			COM6
 
