Fix test user and pass for TwitpicService.

--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -1,7 +1,10 @@
-﻿# twitpic
-twitpic.user =			spraydigital
-twitpic.pass =			b3b0pspraydigital
-twitpic.text =			#SprayDigital na mostra #ArteRadical no Espaco Ecco
+# twitpic
+#twitpic.user =			spraydigital
+#twitpic.pass =			b3b0pspraydigital
+#twitpic.text =			#SprayDigital na mostra #ArteRadical no Espaco Ecco
+twitpic.user =			spamdora666
+twitpic.pass =			caralhada
+twitpic.text =			SprayDigital na tuitosfera!
 twitpic.delay =			3000
 twitpic.enable =		true
 
