Fix props file charset. Fix twitpic msg charset.
Java expects that teh file charsets are utf-8, so our latin1 characters
were being mistranslated. Specify that properties file uses latin1
encoding.

String fields in HTTP forms were not being sent with content-type and
charset by twitpic4j, causing message to show blank on twitpic when
non-ascii characters where sent. Fix twitpic to send messages encoded
properly.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 
 impl/processing/SprayDigital/save/
 impl/java/bin
+impl/java/save
 impl/java/data/save
+
+impl/processing/SprayDigital/application*
+impl/processing/SprayDigital/save
