--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -4,8 +4,8 @@
 #twitpic.text =			#SprayDigital na mostra #ArteRadical no Espaco Ecco
 twitpic.user =			spamdora666
 twitpic.pass =			caralhada
-twitpic.text =			SprayDigital na tuitosfera!
-twitpic.delay =			3000
+twitpic.text =			SprayDigital na tuitosfera! דדדבבאאחחחגגצ
+twitpic.delay =			1000
 twitpic.enable =		true
 
 SprayCan.port =			COM6
