--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -1,17 +1,29 @@
-# twitpic
-#twitpic.user =			spraydigital
-#twitpic.pass =			b3b0pspraydigital
-#twitpic.text =			#SprayDigital na mostra #ArteRadical no Espaco Ecco
-twitpic.user =			spamdora666
-twitpic.pass =			caralhada
-twitpic.text =			SprayDigital na tuitosfera! „„„··‡‡ÁÁÁ‚‚ˆ
-twitpic.delay =			1000
-twitpic.enable =		true
+# TwitpicService
 
-SprayCan.port =			COM6
+# @Spamdora666 with caralhuiter
+#TwitpicService.consumerKey =		F7gtdWZoKAxelZgDUKNcUA
+#TwitpicService.consumerSecret =		oOpHeN6sdEUM2Ioy1mZjmiVBjT4OppWoUMG69ZUYNY
+#TwitpicService.accessToken =		402161710-3gFka8fHHleQUqDrufPdIqrDNxORxNhrNamDhpKs
+#TwitpicService.accessTokenSecret =	mraNvuxUKfyURK6zz9zQbHf8STnKPuPsV37CGFDw
+#TwitpicService.twitpicAPIKey =		36cde99f14e371ecd62b239ebdd4d3e3
 
-canvas.discharge =		200000
+# @SprayDigital with SprayDigital and SprayDigital
+
+TwitpicService.consumerKey =		ProyE6Fwt3Bp5uhg4b2BJA
+TwitpicService.consumerSecret =		jdSPpE7zL9OcqFS4f3YMIDR7Zs3K1dEW12w9mICEk
+TwitpicService.accessToken =		362138923-rYdNqX9I0xx3Z2pi6AKUxJv7ONM4vv642enp9l8
+TwitpicService.accessTokenSecret =	aE4Q3OHm5Pc7nzV7peP6HTa8qYMC3c872t3oT5xXCzY
+TwitpicService.twitpicAPIKey =		84dd8515b1884352e0cd387cd86ba9cc
+
+TwitpicService.caption =			#SprayDigital no Startup Meetup - BrasÌlia. Trazido pelo #StartupFarmBSB
+
+TwitpicService.delay =				1000
+TwitpicService.enable =				true
+
+SprayCan.port =						COM6
+
+canvas.discharge =					200000
 
 # some other stuff
-savePrefix =			save/test
-foo.bar = 				baz
+savePrefix =						save/test
+foo.bar = 							baz
