New potentiometer; Fix save names; Improve props;
Update arduino code to match new potentiometer. Old code was marked as
__Golden__.

Fix save names to separate unix timestamp from milliseconds.

Improve properties file readability by reformatting and removing old
stuff

--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -1,13 +1,40 @@
+#
+#
+#
+#
+#
 # TwitpicService
+#
+#
+#
+#
+#
 
-# @Spamdora666 with caralhuiter
+TwitpicService.enable =				true
+TwitpicService.caption =			#SprayDigital
+TwitpicService.delay =				1000
+
+#
+#
+#
+# Test account/app: @spamdora666/caralhuiter
+#
+#
+#
+
 #TwitpicService.consumerKey =		F7gtdWZoKAxelZgDUKNcUA
-#TwitpicService.consumerSecret =		oOpHeN6sdEUM2Ioy1mZjmiVBjT4OppWoUMG69ZUYNY
+#TwitpicService.consumerSecret =	oOpHeN6sdEUM2Ioy1mZjmiVBjT4OppWoUMG69ZUYNY
 #TwitpicService.accessToken =		402161710-3gFka8fHHleQUqDrufPdIqrDNxORxNhrNamDhpKs
 #TwitpicService.accessTokenSecret =	mraNvuxUKfyURK6zz9zQbHf8STnKPuPsV37CGFDw
 #TwitpicService.twitpicAPIKey =		36cde99f14e371ecd62b239ebdd4d3e3
 
-# @SprayDigital with SprayDigital and SprayDigital
+#
+#
+#
+# Final account/app: @SprayDigital/SprayDigital
+#
+#
+#
 
 TwitpicService.consumerKey =		ProyE6Fwt3Bp5uhg4b2BJA
 TwitpicService.consumerSecret =		jdSPpE7zL9OcqFS4f3YMIDR7Zs3K1dEW12w9mICEk
@@ -15,15 +42,19 @@ TwitpicService.accessToken =		362138923-rYdNqX9I0xx3Z2pi6AKUxJv7ONM4vv642enp9l8
 TwitpicService.accessTokenSecret =	aE4Q3OHm5Pc7nzV7peP6HTa8qYMC3c872t3oT5xXCzY
 TwitpicService.twitpicAPIKey =		84dd8515b1884352e0cd387cd86ba9cc
 
-TwitpicService.caption =			#SprayDigital no Startup Meetup - Brasília. Trazido pelo #StartupFarmBSB
-
-TwitpicService.delay =				1000
-TwitpicService.enable =				true
+#
+#
+#
+#
+#
+# Other Stuff
+#
+#
+#
+#
+#
 
 SprayCan.port =						COM6
-
 canvas.discharge =					200000
-
-# some other stuff
-savePrefix =						save/test
+savePrefix =						save/SprayDigital_
 foo.bar = 							baz
