Add image graywall.jpg; Add prop background_image.
Add image graywall.jpg as new default image.

Add property background_image to properties file which allows to specify
teh image to be used as background.

--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -54,6 +54,7 @@ TwitpicService.twitpicAPIKey =		84dd8515b1884352e0cd387cd86ba9cc
 #
 #
 
+background_image =					graywall.jpg
 SprayCan.port =						COM6
 canvas.discharge =					200000
 savePrefix =						save/SprayDigital_
