--- a/impl/java/data/sprayDigital.properties
+++ b/impl/java/data/sprayDigital.properties
@@ -22,11 +22,11 @@ TwitpicService.delay =				1000
 #
 #
 
-TwitpicService.consumerKey =		F7gtdWZoKAxelZgDUKNcUA
-TwitpicService.consumerSecret =	oOpHeN6sdEUM2Ioy1mZjmiVBjT4OppWoUMG69ZUYNY
-TwitpicService.accessToken =		402161710-3gFka8fHHleQUqDrufPdIqrDNxORxNhrNamDhpKs
-TwitpicService.accessTokenSecret =	mraNvuxUKfyURK6zz9zQbHf8STnKPuPsV37CGFDw
-TwitpicService.twitpicAPIKey =		36cde99f14e371ecd62b239ebdd4d3e3
+#TwitpicService.consumerKey =		F7gtdWZoKAxelZgDUKNcUA
+#TwitpicService.consumerSecret =	oOpHeN6sdEUM2Ioy1mZjmiVBjT4OppWoUMG69ZUYNY
+#TwitpicService.accessToken =		402161710-3gFka8fHHleQUqDrufPdIqrDNxORxNhrNamDhpKs
+#TwitpicService.accessTokenSecret =	mraNvuxUKfyURK6zz9zQbHf8STnKPuPsV37CGFDw
+#TwitpicService.twitpicAPIKey =		36cde99f14e371ecd62b239ebdd4d3e3
 
 #
 #
@@ -36,11 +36,11 @@ TwitpicService.twitpicAPIKey =		36cde99f14e371ecd62b239ebdd4d3e3
 #
 #
 
-#TwitpicService.consumerKey =		ProyE6Fwt3Bp5uhg4b2BJA
-#TwitpicService.consumerSecret =		jdSPpE7zL9OcqFS4f3YMIDR7Zs3K1dEW12w9mICEk
-#TwitpicService.accessToken =		362138923-rYdNqX9I0xx3Z2pi6AKUxJv7ONM4vv642enp9l8
-#TwitpicService.accessTokenSecret =	aE4Q3OHm5Pc7nzV7peP6HTa8qYMC3c872t3oT5xXCzY
-#TwitpicService.twitpicAPIKey =		84dd8515b1884352e0cd387cd86ba9cc
+TwitpicService.consumerKey =		ProyE6Fwt3Bp5uhg4b2BJA
+TwitpicService.consumerSecret =		jdSPpE7zL9OcqFS4f3YMIDR7Zs3K1dEW12w9mICEk
+TwitpicService.accessToken =		362138923-rYdNqX9I0xx3Z2pi6AKUxJv7ONM4vv642enp9l8
+TwitpicService.accessTokenSecret =	aE4Q3OHm5Pc7nzV7peP6HTa8qYMC3c872t3oT5xXCzY
+TwitpicService.twitpicAPIKey =		84dd8515b1884352e0cd387cd86ba9cc
 
 #
 #
